# centurion

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  prompt-security.yml
.harness-v1-backup/: config.json  design.md  progress.md  requirements.md  tasks.json
.harness-v1-backup/reports/: generate_report.py
centurion/: __init__.py  __main__.py  config.py  integrations.py  logging.py  skill.py
centurion/a2a/: __init__.py  agent_card.py  router.py
centurion/agent_types/: __init__.py  base.py  claude_api.py  claude_cli.py  registry.py  shell.py
centurion/api/: auth.py  router.py  schemas.py  websocket.py
centurion/core/: __init__.py  broadcast.py  century.py  circuit_breaker.py  engine.py  events.py  exceptions.py  jetsam.py  legion.py  legionary.py  scheduler.py  sentinel.py  session_registry.py
centurion/db/: repository.py  schema.py
centurion/hardware/: probe.py  throttle.py
centurion/integrations/: __init__.py  setup.py
centurion/mcp/: tools.py
docs/: INDUSTRIAL_UPGRADE_REPORT.md  competitive-analysis.md  contributor-invite-email.md  index.html  launch-plan.md  memory-pressure-design.md
scripts/: check-prompt-diff.py  install-launchd.sh
site/: index.html
tests/: conftest.py  test_agent_types.py  test_api.py  test_auth.py  test_century.py  test_circuit_breaker.py  test_e2e.py  test_eng3_logging.py  test_engine.py  test_events.py  test_exceptions.py  test_health.py  test_jetsam.py  test_legion.py  test_legionary.py  test_logging.py  test_mcp_tools.py  test_purge.py  test_registry.py  test_router.py  test_scheduler.py  test_scheduler_advanced.py  test_scheduler_pressure.py  test_sentinel.py  test_session_registry.py  test_throttle.py  test_websocket.py
tests/integration/: test_full_lifecycle.py  test_memory_guardrails.py
